Denora Version 1.4.0-SVN
------------------------
Provided by Denora Team <dev@denorastats.org> - 2008
05/15 A PSDK 2008 support                                         [ #00]
04/28 A Improved channel TS support                               [ #00]
02/28 A Chan messages from excluded users now counted globally    [ #00]
05/06 U Updated GeoIP.dat                                         [ #00]
05/03 F Fixed crash on some kicks for whatever reason             [#491]
05/03 F Fixed SQL problems with ircds with long channel names     [ #00]
04/28 F Improved inspircd FJOIN/FMODE support                     [ #00]
02/29 F Fixed possible segfault on restart                        [ #00]
02/29 F Fixed MODE not handled correctly in inspircd11            [ #00]
02/27 F Fixed segfault on certain inspircd11 FMODE events         [#485]
02/26 F Fixed inspircd11 +j/+J mode data not written to sql       [ #00]
02/26 F Fixed crash on truncated inspircd11 PUSH message          [#489]
02/17 F Added missing user modes to UltimateIRCd                  [#488]

Provided by Jobe <jobe@mdbnet.co.uk>
05/05 F Fixed +f mode handling in nefarious                       [ #00]
04/28 F Fixed not updating p10 vhost in sql in some cases         [#501] 
04/22 F Fix persistent channels getting deleted on last user part [#493]
04/22 F Fixes to server squit routine                     [#481,482,486]

Provided by Kein <kein-of@yandex.ru>
04/22 U Updated Russian language file                             [ #00]

Provided by OUTsider <outsider@scarynet.org>
05/03 A Added support for Nefarious 1.2                           [#502]


Denora Version 1.4.0-RC2
------------------------
Provided by Denora Team <dev@denorastats.org> - 2008
01/11 A Detection of Windows Vista and Windows Server 2008        [ #00]
01/10 A Added persistent channel mode support for nefarious       [#466]
01/09 U Updated GeoIP.dat                                         [ #00]